syntax = "proto3";

option csharp_namespace = "Mip.Grpc.Example.Calc";

package calc;

service Calculator {
	rpc Add (AddRequest) returns(AddResponse);
}

message AddRequest {
	int32 a = 1;
	int32 b = 2;
}

message AddResponse {
	int32 res = 1;
}